--- a/src/lib/projects.json
+++ b/src/lib/projects.json
@@ -1,21 +1,21 @@
 [
 	{
-		"title": "Lorem ipsum dolor sit.",
+		"title": "A1",
 		"image": "https://vis-society.github.io/labs/2/images/empty.svg",
 		"description": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam dolor quos, quod assumenda explicabo odio, nobis ipsa laudantium quas eum veritatis ullam sint porro minima modi molestias doloribus cumque odit."
 	},
 	{
-		"title": "Architecto minima sed omnis?",
+		"title": "A2",
 		"image": "https://vis-society.github.io/labs/2/images/empty.svg",
 		"description": "Est, reiciendis aspernatur debitis maxime et itaque animi sit quod quo, tempore incidunt tempora dignissimos exercitationem enim numquam quam quaerat optio laborum ut unde hic delectus laboriosam? Quasi, cupiditate corporis."
 	},
 	{
-		"title": "Asperiores rem repellendus doloremque.",
+		"title": "A3",
 		"image": "https://vis-society.github.io/labs/2/images/empty.svg",
 		"description": "Eligendi tenetur quae quos recusandae est. Cumque, voluptatem. Quo nihil dignissimos molestiae explicabo praesentium aspernatur debitis, illo rerum possimus quam ducimus earum nulla officiis maiores itaque repellat corporis soluta labore?"
 	},
 	{
-		"title": "Laudantium reprehenderit placeat perspiciatis.",
+		"title": "A4",
 		"image": "https://vis-society.github.io/labs/2/images/empty.svg",
 		"description": "Quo minus perferendis nulla corrupti repellat dolorem dolore assumenda sit minima ducimus quidem ullam, id ipsa dicta tempora laborum officiis unde possimus cumque nobis alias inventore! Ullam repudiandae iusto nam."
 	},
